# lite-data-stack-postgres

./: .env.example  .gitignore  .sqlfluff  README.md  pyproject.toml
.github/workflows/: data-pipeline.yml  dbt-cd-docs.yml  dbt-pr-ci.yml
extraction/: .env.example  meltano.yml
extraction/scripts/: setup-local.sh
transform/: dbt.sh  dbt_project.yml  profiles.yml.example
transform/macros/: generate_schema_name.sql
transform/models/production/marts/: character_status.yml  episode_character_counts.yml  episode_summary.yml  location_summary.sql  location_summary.yml  mart_character_status.sql  mart_episode_character_counts.sql  mart_episode_summary.sql  mart_location_summary.sql  schema.yml
transform/models/staging/: _sources.yml  schema.yml  stg_characters.sql  stg_episodes.sql  stg_locations.sql
transform/scripts/: setup-local.sh
